--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ reqwest = { version = "0.12.20", features = [
     "blocking",
 ], default-features = false }
 scraper = "0.23.1"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 yaml-rust = "0.4.5"
