--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bytes = "1.10.1"
 inquire = "0.7.5"
 reqwest = { version = "0.12.20", features = [
     "rustls-tls", # simplifies package management on NixOS
